infra/k8s/istio/service-1/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: service-1
spec:
  mtls:
    mode: STRICT
