infra/k8s/istio/service-1/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-1
  namespace: service-1
spec:
  host: service-1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
