infra/k8s/istio/service-1/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-1-allow-jwt
  namespace: service-1
spec:
  selector:
    matchLabels:
      app: service-1
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
    when:
    - key: request.auth.principal
      values:
      - "cluster.local/*"
